Made a temporary fix for #1